# profusion

./: .gitignore  Cargo.toml  README.md
benches/: Cargo.toml  codegen.rs
benches/execution/: main.rs
benches/execution/cornucopia_benches/: generated.rs
crates/client_async/: Cargo.toml  README.md
crates/client_async/src/: lib.rs  private.rs
crates/client_core/: Cargo.toml  README.md
crates/client_sync/: Cargo.toml  README.md
crates/client_sync/src/: lib.rs  private.rs
crates/cornucopia/: Cargo.toml
crates/cornucopia/src/: codegen.rs
crates/profusion/: Cargo.toml
crates/profusion/src/: cli.rs  codegen.rs  conn.rs  container.rs  error.rs  lib.rs  main.rs  prepare_queries.rs  type_registrar.rs
examples/auto_build/: Cargo.toml  _build.rs
examples/auto_build/src/: cornucopia.rs  main.rs
examples/basic_async/: Cargo.toml  README.md
examples/basic_async/src/: cornucopia.rs  main.rs
examples/basic_sync/: Cargo.toml  README.md
examples/basic_sync/src/: cornucopia.rs  main.rs
test_codegen/: Cargo.toml
test_codegen/src/: cornucopia.rs  main.rs
test_integration/: Cargo.toml  README.md
test_integration/fixtures/codegen/: benchmarks.toml  test_codegen.toml
test_integration/src/: codegen.rs  errors.rs  fixtures.rs  main.rs
